fix(styles): odd wrapping on choose account and reset pwd links on sign in in some l10ns

--- a/packages/fxa-content-server/app/styles/_general.scss
+++ b/packages/fxa-content-server/app/styles/_general.scss
@@ -634,6 +634,7 @@ button::-moz-focus-inner {
   overflow: auto;
   // the 1px of padding allows the :focus outline on anchors to show.
   padding: 1px;
+  text-align: center;
 
   + .privacy-links {
     margin: 20px 0 15px 0;
@@ -641,10 +642,14 @@ button::-moz-focus-inner {
 
   .left {
     float: left;
+    padding: 0 4% 0 0;
+    width: 50%;
   }
 
   .right {
     float: right;
+    padding: 0 0 0 4%;
+    width: 50%;
   }
 
   a {
